--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "autocomplete-checkbox",
+  "name": "inquirer-customizable",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,7 +10,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "devDependencies": {
     "@types/inquirer": "^8.1.2",
     "@types/lodash.debounce": "^4.0.6",
