--- a/package.json
+++ b/package.json
@@ -1,34 +1,22 @@
 {
-  "name": "inquirer-customizable",
-  "version": "0.0.1",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc -b",
-    "start": "ts-node examples/basicCheckbox/example.ts"
-  },
-  "keywords": [],
-  "author": "",
+  "name": "root",
+  "author": "Coveo",
   "license": "Apache-2.0",
-  "devDependencies": {
-    "@types/inquirer": "^8.1.2",
-    "@types/lodash.debounce": "^4.0.6",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.4.3"
-  },
-  "dependencies": {
-    "chalk": "^4.1.2",
-    "cli-cursor": "^3.1.0",
-    "figures": "^3.2.0",
-    "inquirer": "^8.1.5",
-    "inquirer-checkbox-autocomplete-prompt": "^0.2.0",
-    "is-unicode-supported": "^1.1.0",
-    "lodash.debounce": "^4.0.8",
-    "rxjs": "^7.3.0"
+  "private": true,
+  "version": "0.0.0",
+  "description": "An Inquirer prompt relying on user-defined input and rendering.",
+  "scripts": {
+    "setup": "npm i && lerna bootstrap"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/coveo/inquirer-customizable.git"
+    "url": "git+https://github.com/coveo/inquirer-customizable.git"
+  },
+  "bugs": {
+    "url": "https://github.com/coveo/inquirer-customizable/issues"
+  },
+  "homepage": "https://github.com/coveo/inquirer-customizable#readme",
+  "devDependencies": {
+    "lerna": "^4.0.0"
   }
 }
