--- a/lerna.json
+++ b/lerna.json
@@ -1,14 +1,17 @@
 {
-    "packages": ["packages/*"],
-    "command": {
-      "version": {
-        "allowBranch": "main",
-        "conventionalCommits": true,
-        "createRelease": "github",
-        "message": "[skip ci] chore(release): publish"
-      },
-      "publish": {
-        "verifyAccess": false
-      }
+  "packages": [
+    "packages/*"
+  ],
+  "command": {
+    "version": {
+      "allowBranch": "main",
+      "conventionalCommits": true,
+      "createRelease": "github",
+      "message": "[skip ci] chore(release): publish"
+    },
+    "publish": {
+      "verifyAccess": false
     }
-  }
+  },
+  "version": "0.0.0"
+}
