--- a/packages/inquirer-customizable/.gitignore
+++ b/packages/inquirer-customizable/.gitignore
@@ -82,6 +82,9 @@ typings/
 .nuxt
 dist
 
+# Generated types
+types
+
 # Gatsby files
 .cache/
 # Comment in the public line in if your project uses Gatsby and *not* Next.js
@@ -102,3 +105,4 @@ dist
 
 # TernJS port file
 .tern-port
+
