--- a/packages/inquirer-customizable/package.json
+++ b/packages/inquirer-customizable/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/inquirer": "^8.1.2",
     "@types/lodash.debounce": "^4.0.6",
+    "strip-ansi": "^6.0.1",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   },
