--- a/packages/inquirer-customizable/package.json
+++ b/packages/inquirer-customizable/package.json
@@ -4,7 +4,7 @@
   "description": "An Inquirer prompt relying on user-defined input and rendering.",
   "type": "commonjs",
   "types": "types/index.d.ts",
-  "main": "dist/src/index.js",
+  "main": "dist/index.js",
   "files": [
     "dist/**",
     "types/**",
